[package]
name = "dalboz"
version = "0.1.0"
authors = ["Connor Glosser <glosser1@gmail.com>"]
edition = "2018"

[dependencies.serenity]
version = "0.10"
default_features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.regex]
version = "1.4"
