[package]
name = "dalboz"
version = "0.1.0"
authors = ["Connor Glosser <glosser1@gmail.com>"]
edition = "2018"

[dependencies.serenity]
version = "0.10"
default_features = false
features = ["client", "gateway", "rustls_backend", "model",
            "unstable_discord_api"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies]
regex = "1.4"
reqwest = "0.11"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
itertools = "0.10.0"